# PythonWebHW3

./: Dockerfile  README.md  pyproject.toml
Personal_assistant/: classes.py  file_parser.py  main.py  sorter.py  styles.py  view.py
